# simple-calulator-someip

./: CMakeLists.txt
config/: commonapi.ini
config/server/: vsomeip_server.json
fidl/: Calculator.fdepl  Calculator.fidl
fidl/html/: annotated.html  classes.html  functions.html  functions_func.html  functions_vars.html  index.html  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator-members.html  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator.html  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator__client-members.html  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator__client.html
fidl/html/search/: all_2.js  all_3.js  all_4.js  classes_0.js  functions_0.js  search.js
fidl/latex/: annotated.tex  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator.tex  interfaceSimpleCalculator_1_1CalculatorInterface_1_1Calculator__client.tex  refman.tex
inc/: CalculatorNSMConsumer.h  CalculatorServer.h  CalculatorStubImpl.h
src/: .cproject  CalculatorNSMConsumer.cpp  CalculatorServer.cpp  CalculatorStubImpl.cpp
src-gen/v1/SimpleCalculator/CalculatorInterface/: Calculator.hpp  CalculatorDBusDeployment.cpp  CalculatorDBusDeployment.hpp  CalculatorDBusProxy.cpp  CalculatorDBusProxy.hpp  CalculatorDBusStubAdapter.cpp  CalculatorDBusStubAdapter.hpp  CalculatorProxy.hpp  CalculatorProxyBase.hpp  CalculatorSomeIPDeployment.cpp  CalculatorSomeIPDeployment.hpp  CalculatorSomeIPProxy.cpp  CalculatorSomeIPProxy.hpp  CalculatorSomeIPStubAdapter.cpp  CalculatorSomeIPStubAdapter.hpp  CalculatorStub.hpp  CalculatorStubDefault.cpp  CalculatorStubDefault.hpp
test_suite/CalculatorClient/: CMakeLists.txt
test_suite/CalculatorClient/inc/: CalculatorClient.h
test_suite/CalculatorClient/src/: CalculatorClient.cpp
test_suite/LifecycleTest/: CMakeLists.txt
test_suite/LifecycleTest/inc/: LifecycleTest.h
test_suite/LifecycleTest/src/: LifecycleTest.cpp
